fixing off-centering

--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,7 @@ body {
     display: flex;
     justify-content: center;
     margin: 0 auto 60px;
-    overflow-x: hidden !important;
+    overflow-x: hidden;
 }
 
 #root {
@@ -31,6 +31,7 @@ body {
     flex-direction: column;
     gap: 60px;
     padding: 0 40px;
+    overflow-x: hidden;
     box-sizing: border-box;
     max-width: 100%;
     width: 100%;
